2001-07-20  Radek Doulik  <rodo@ximian.com>

	* GNOME_GtkHTML_Editor.xml.in: use 16 pixels version for Menu and
	24 pixels version for Toolbar (Cut/Copy/Paste), remove stock
	references from commands

2001-07-20  Larry Ewing  <lewing@ximian.com>

	* GNOME_GtkHTML_Editor.xml.in: use the cut/copy/paste icons from
	tigert, and Change the labels for insert* so that the accelerator
	doesn't show.

2001-07-19  Radek Doulik  <rodo@ximian.com>

	* GNOME_GtkHTML_Editor.xml.in: use those realy nice icons from
	Jakub

	* Makefile.am (EXTRA_DIST): added GNOME_GtkHTML_Editor.xml.in
	(GNOME_GtkHTML_Editor.xml): generate from .in

2001-07-17  Radek Doulik  <rodo@ximian.com>

	* search.c (search): added title
	(gtk_html_search_dialog_new): removed title parameter

	* replace.c (replace): added title

	* dialog.c (run_dialog): added title parameter

	* menubar.c (search_cb): non regex
	(search_regex_cb): regex

	* properties.c (switch_page): check for d->dialog
	(destroy_dialog): new signal handler, sets d->dialog to NULL

2001-07-13  Larry Ewing  <lewing@ximian.com>

	* popup.c: disable debug #define and wrap the disabled functions
	in the #ifdef.  This shouldn't be enabled by default.  

	* persist-file-impl.c (persist_file_impl_new): fix a stupid error
	in the previous change.

2001-07-09  Larry Ewing  <lewing@ximian.com>

	* persist-stream-impl.c (persist_stream_impl_new): ref the html
	widget.
	(ps_destroy): unref the html widget.

	* persist-file-impl.c (persist_file_impl_new): ref the html widget
	so that if the control goes away we still have a valid handle.
	(pf_destroy): unref the html widget.
	
2001-07-02  Dan Winship  <danw@ximian.com>

	* persist-file-impl.c (impl_save): Add O_TRUNC to the open() flags
	so saving over an existing file doesn't leave garbage at the end.
	(save_receiver): Fix this to not keep rewriting the same data over
	and over in the case of a partial write.

2001-06-26  JP Rosevear  <jpr@ximian.com>

	* Makefile.am: Remove non-existent file
